# a2a-test

./: README.md  message_to_designer.txt  message_to_developer.txt  message_to_pm.txt  pyproject.toml
docs/: estructura_proyecto.md  windows_pwsh.md  wsl_linux.md  wsl_setup.md
memory-bank/: cloudinary_usage.md  expo_setup.md  figma_login_design.md  google_auth.md  supabase_schema.sql
src/a2a_test/: __init__.py  agent.py  agent_designer.py  agent_developer.py  agent_product_manager.py
src/my_project/: agent.py  task_manager.py
